modularilify cloudyword js. add html and svg outputs

--- a/cloudyword_js/index.html
+++ b/cloudyword_js/index.html
@@ -20,17 +20,28 @@ div___ { border: 1px solid red; }
 <div id='cloud'>
 </div>
 
+<iframe id="cloudframe" src="blank.svg" width="500" height="500"></iframe>
 
 <script language="javascript" src="jquery.js"></script>
 <script language="javascript" src="cloudyword.js"></script>
+<script language="javascript" src="cloudyword_html.js"></script>
+<script language="javascript" src="cloudyword_svg.js"></script>
 <script language="javascript" src="out.json"></script>
 <script language="javascript">
 
+$(document).ready(function() {
+    $('#cloudframe').ready(function() {
+        console.log(this);
+    });
+});
+
 var s = new Date();
 //console.profile();
-var cloud = new Cloud(items, 500, 500, {
+var cloud = new vapourword.Cloud(items, 500, 500, {
     max_font_size: 100, 
     min_font_size: 8,
+    output: vapourword.output_svg,
+    output_target: $('#cloudframe')[0].contentDocument,
 });
 //console.profileEnd();
 var s2 = new Date();
